// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when validating interchange identity template has duplicate names should have validation failures 1`] = `"Interchange InterchangeName redeclares identity template DomainEntityIdentityTemplateName."`;

exports[`when validating interchange identity template has duplicate names should have validation failures 2`] = `
Object {
  "column": 27,
  "line": 3,
  "tokenText": "DomainEntityIdentityTemplateName",
}
`;

exports[`when validating interchange identity template has multiple duplicate names should have validation failures 1`] = `"Interchange InterchangeName redeclares identity template DomainEntityIdentityTemplateName1."`;

exports[`when validating interchange identity template has multiple duplicate names should have validation failures 2`] = `
Object {
  "column": 27,
  "line": 3,
  "tokenText": "DomainEntityIdentityTemplateName1",
}
`;

exports[`when validating interchange identity template has multiple duplicate names should have validation failures 3`] = `"Interchange InterchangeName redeclares identity template DomainEntityIdentityTemplateName2."`;

exports[`when validating interchange identity template has multiple duplicate names should have validation failures 4`] = `
Object {
  "column": 27,
  "line": 5,
  "tokenText": "DomainEntityIdentityTemplateName2",
}
`;
